--- a/apps/docs/src/pages/docs/ecosystem/browser-router.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/browser-router.mdx
@@ -1,5 +1,6 @@
 import { CodeBlock } from '@/components/code-block/code-block.kita';
 import { DocsLayout } from '@/layouts/docs-layout';
+import { Banner } from '@/components/banner/banner.kita';
 
 export const layout = DocsLayout;
 
@@ -8,16 +9,17 @@ export const getMetadata = () => ({
   description: 'Add SPA-like client-side navigation and view transitions to your Ecopages application',
 });
 
+
 # Client-Side Navigation
 
 The `@ecopages/browser-router` package enables Single Page Application (SPA) navigation behavior in your Ecopages application. It intercepts link clicks, fetches the next page via fetch, and uses [morphdom](https://github.com/patrick-steele-idem/morphdom) to efficiently diff and update only the parts of the DOM that changed.
 
 This preserves element state (like audio players, web component internals, or form values) and enables native View Transitions.
 
-<div class="banner banner--alert" role="alert">
-  <p class="banner__title">Framework Compatibility</p>
+<Banner type="alert">
+  <Banner.Title>Framework Compatibility</Banner.Title>
   <p>This package works with MPA-style rendering (KitaJS, Lit, vanilla JS). <strong>Not compatible with React/Preact</strong> — these frameworks manage their own virtual DOM. For React apps, use a framework-specific routing solution.</p>
-</div>
+</Banner>
 
 ## Installation
 
@@ -104,10 +106,10 @@ Add the `data-eco-persist` attribute with a unique ID:
 ```
 </CodeBlock>
 
-<div class="banner banner--note" role="note">
-  <p class="banner__title">How It Works</p>
+<Banner type="info">
+  <Banner.Title>How It Works</Banner.Title>
   <p>Unlike traditional DOM swapping which destroys and recreates elements, morphdom diffs the current DOM against the new HTML. Persisted elements are matched by their ID and left untouched, keeping their internal state intact.</p>
-</div>
+</Banner>
 
 ### View Transitions
 
