--- a/apps/docs/src/pages/docs/integrations/kitajs.mdx
+++ b/apps/docs/src/pages/docs/integrations/kitajs.mdx
@@ -1,5 +1,6 @@
 import { CodeBlock } from '@/components/code-block/code-block.kita';
 import { DocsLayout } from '@/layouts/docs-layout';
+import { Banner } from '@/components/banner/banner.kita';
 
 export const layout = DocsLayout;
 
@@ -98,12 +99,13 @@ export default HomePage;
 
 The KitaJS integration works well with other Ecopages plugins. For example, you can use it alongside the MDX plugin for markdown support:
 
-<div class="banner banner--info mt-4" role="alert">
-	<p class="banner__title">MDX Support</p>
+
+<Banner type="info">
+	<Banner.Title>MDX Support</Banner.Title>
 	<p>
 		For using JSX within Markdown/MDX, please see the <a href="/docs/integrations/mdx">MDX Integration</a>. The KitaJS plugin works seamlessly with MDX!
 	</p>
-</div>
+</Banner>
 
 <CodeBlock>
 ```typescript
