--- a/apps/docs/src/pages/docs/integrations/react.mdx
+++ b/apps/docs/src/pages/docs/integrations/react.mdx
@@ -1,5 +1,6 @@
 import { CodeBlock } from '@/components/code-block/code-block.kita';
 import { DocsLayout } from '@/layouts/docs-layout';
+import { Banner } from '@/components/banner/banner.kita';
 
 export const layout = DocsLayout;
 
@@ -137,9 +138,9 @@ import { ClientOnly } from '@ecopages/react/utils/client-only';
 
 ## MDX Support
 
-<div class="banner banner--info mt-4" role="alert">
-	<p class="banner__title">MDX Support</p>
+<Banner type="info">
+	<Banner.Title>MDX Support</Banner.Title>
 	<p>
 		This integration focuses on rendering React components in your pages. For using React within Markdown/MDX, please see the <a href="/docs/integrations/mdx">MDX Integration</a>.
 	</p>
-</div>
+</Banner>
