--- a/apps/docs/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/pages/docs/getting-started/introduction.mdx
@@ -1,4 +1,3 @@
-import { CodeBlock } from '@/components/code-block/code-block.kita';
 import { DocsLayout } from '@/layouts/docs-layout';
 import { Banner } from '@/components/banner/banner.kita';
 
@@ -17,9 +16,9 @@ export const getMetadata = () => ({
 	<p>
 		Ecopages is currently in beta. The API may change before the stable release. <a href="https://github.com/ecopages/ecopages/tree/main/examples" target="_blank">Check out the examples.</a>
 	</p>
-	<code>
-		<span class="select-none">$ </span>bunx degit ecopages/ecopages/examples/starter-jsx my-ecopages
-	</code>
+	```bash
+	bunx degit ecopages/ecopages/examples/starter-jsx my-ecopages
+	```
 </Banner>
 
 Ecopages is a modern web framework built on [Bun](https://bun.sh/) that lets you build fast, static-first websites. The core philosophy is simple: **you don't always need a server** but, when you do, Ecopages has you covered.
@@ -61,7 +60,6 @@ Most web frameworks force you to choose: either a static site generator or a ful
 
 Here's a taste of what Ecopages looks like:
 
-<CodeBlock>
 ```typescript
 // app.ts
 import { EcopagesApp } from '@ecopages/core/adapters/bun/create-app';
@@ -77,7 +75,6 @@ app.get('/api/hello', async ({ response }) => {
 
 await app.start();
 ```
-</CodeBlock>
 
 ## Current Status
 
@@ -87,11 +84,9 @@ Ecopages is in active development. The core features are stable and used in prod
 
 Ready to try Ecopages? Check out the [Installation Guide](/docs/getting-started/installation) to create your first project.
 
-<CodeBlock>
 ```bash
 bunx degit ecopages/ecopages/examples/starter-jsx my-ecopages
 cd my-ecopages
 bun install
 bun run dev
 ```
-</CodeBlock>
