--- a/apps/docs/src/pages/docs/ecosystem/browser-router.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/browser-router.mdx
@@ -100,6 +100,30 @@ Add the `data-eco-persist` attribute with a unique ID:
   <p>Unlike traditional DOM swapping which destroys and recreates elements, morphdom diffs the current DOM against the new HTML. Persisted elements are matched by their ID and left untouched, keeping their internal state intact.</p>
 </Banner>
 
+### Script Re-execution
+
+By default, scripts in the `<head>` are not re-executed during navigation if they already exist. However, some scripts (like hydration logic or analytics) need to run on every page load.
+
+To force a script to re-execute on navigation:
+
+1. Add `data-eco-rerun="true"` to force execution.
+2. Add `data-eco-script-id="unique-id"` to identify the script (preventing duplicate downloads).
+
+```html
+<script 
+  type="module" 
+  data-eco-rerun="true" 
+  data-eco-script-id="analytics-tracker"
+>
+  // This runs on initial load AND every navigation
+  initAnalytics(window.location.pathname);
+</script>
+```
+
+**How it works:**
+- If the script with `data-eco-script-id` already exists, it is **not** re-downloaded.
+- If it has `data-eco-rerun`, the router takes care of re-executing it.
+
 ### View Transitions
 
 If `viewTransitions: true` is enabled, Ecopages will trigger a View Transition on navigation. You can customize the animation using standard CSS or the provided optional styles.
