refactor(docs): Improve clarity and consistency of punctuation and wording across documentation.

--- a/apps/docs/src/pages/docs/ecosystem/browser-router.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/browser-router.mdx
@@ -17,7 +17,7 @@ This preserves element state (like audio players, web component internals, or fo
 
 <Banner type="alert">
   <Banner.Title>Framework Compatibility</Banner.Title>
-  <p>This package works with MPA-style rendering (KitaJS, Lit, vanilla JS). <strong>Not compatible with React/Preact</strong> — these frameworks manage their own virtual DOM. For React apps, use a framework-specific routing solution.</p>
+  <p>This package works with MPA-style rendering (KitaJS, Lit, vanilla JS). <strong>Not compatible with React/Preact</strong>, these frameworks manage their own virtual DOM. For React apps, use a framework-specific routing solution.</p>
 </Banner>
 
 ## Installation
