refactor(docs): minor adjustments

--- a/apps/docs/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/pages/docs/getting-started/introduction.mdx
@@ -39,7 +39,7 @@ The result? Fast static pages, minimal dependencies, and code you can actually u
 
 3. **Static by Default**: Generate HTML at build time. Host anywhere. No server costs for most sites.
 
-4. **Server When You Need It**: Full HTTP API with Express-like routing (`app.get()`, `app.post()`, etc.) for dynamic features—added incrementally, not as the default.
+4. **Server When You Need It**: Full HTTP API with Express-like routing (`app.get()`, `app.post()`, etc.) for dynamic features can be added incrementally, not as the default.
 
 5. **Choose Your Templating**:
    - **[KitaJS](/docs/integrations/kitajs)** – Fast JSX templates, compiles to string concatenation
