refactor: Update postcss-processor preset import paths

--- a/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
@@ -33,7 +33,8 @@ bun add -D tailwindcss@3.4.19
 
 ```typescript
 import { ConfigBuilder } from '@ecopages/core';
-import { postcssProcessorPlugin, tailwindV3Preset } from '@ecopages/postcss-processor';
+import { postcssProcessorPlugin } from '@ecopages/postcss-processor';
+import { tailwindV3Preset } from '@ecopages/postcss-processor/presets/tailwind-v3';
 
 const config = await new ConfigBuilder()
   .setProcessors([
@@ -55,7 +56,8 @@ bun add -D @tailwindcss/postcss
 ```typescript
 import path from 'node:path';
 import { ConfigBuilder } from '@ecopages/core';
-import { postcssProcessorPlugin, tailwindV4Preset } from '@ecopages/postcss-processor';
+import { postcssProcessorPlugin } from '@ecopages/postcss-processor';
+import { tailwindV4Preset } from '@ecopages/postcss-processor/presets/tailwind-v4';
 
 const config = await new ConfigBuilder()
   .setProcessors([
