docs(postcss-processor): add tailwindcss to installation commands for postcss processor

--- a/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
@@ -50,7 +50,7 @@ export default config;
 This preset supports Tailwind CSS v4, utilizing `@tailwindcss/postcss`. It also automatically handles `@reference` injection for `@apply` directives, making usage simpler in isolated component styles.
 
 ```bash
-bun add -D @tailwindcss/postcss
+bun add -D @tailwindcss/postcss tailwindcss
 ```
 
 ```typescript
